.provarCaches/00Df2000001KKNJEA4/objects/Incap311__X311_ESRI_Layer_Mapping__mdt.object
<CustomObject>
    <description>Mapping information between a layer and a field for a given Location Endpoint.</description>
    <fields>
        <fullName>Incap311__Field_Name__c</fullName>
        <description>The field name of the request to associate the layer information to.</description>
        <label>Field Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Layer_ID__c</fullName>
        <description>The layer ID from ESRI to match against.</description>
        <label>Layer ID / Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Layer_Value__c</fullName>
        <description>A path to the value to use from the layer. This is always relative to the layer attribute (ie; if you want the value, just type &quot;value&quot;, if you want attribute abc, you would type &quot;attribute.abc&quot;)</description>
        <label>Layer Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Location_Endpoint__c</fullName>
        <description>The location endpoint this mapping belongs to.</description>
        <label>Location Endpoint</label>
        <referenceTo>Incap311__Location_Endpoint__mdt</referenceTo>
        <relationshipName>Location_Layer_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>311 ESRI Layer Mapping</label>
    <pluralLabel>311 ESRI Layer Mappings</pluralLabel>
</CustomObject>